# Two-sided-Assortment-Optimization-Adaptivity-Gaps-and-Approximation-Algorithms

./: .gitignore  AGENTS.md  All simulations.ipynb  METHODS.md  README.md  config.toml  environment.yml  pyproject.toml
configs/: appendix_g_heterogeneity.toml  appendix_g_outside_option.toml  section7.toml  smoke.toml
data/: results.parquet
docs/: algorithm_implementation.md  corrections.md  experiment_protocol.md  paper_code_map.md  parquet_schema.md
legacy/: All simulations.ipynb  for tables.xlsx
scripts/: _common.py  build_paper_figures.py  build_paper_tables.py  check_environment.py  generate_appendix_g_instances.py  generate_section7_instances.py  make_figures.py  make_tables.py  run_appendix_g_heterogeneity.py  run_appendix_g_outside_option.py  run_experiments.py  run_section7_adaptivity.py  run_section7_fully_static.py  validate_corrected_project.py
src/tsao/: __init__.py  choice.py  config.py  instance.py  oracle.py  policy.py  simulation.py  state.py
src/tsao/algorithms/: __init__.py  arbitrary_order_greedy.py  cardinality.py  fully_adaptive.py  fully_static.py  one_sided_adaptive.py  one_sided_static.py
src/tsao/benchmarks/: __init__.py  dynamic_programs.py  opt_fully_static.py  (+4 more)
tables/: table1.parquet  table1.tex  table2.parquet  table2.tex  table3.parquet  table3.tex  table4.parquet  table4.tex
tests/: test_corrections.py  test_exact_benchmarks.py  test_experiment_smoke.py  test_experiment_specification.py  test_model_choice_oracle.py  test_paper_algorithms.py  test_parquet_storage.py  test_policy_state.py  test_reporting_missing_data.py
(+18 files in other folders)
